# prompt_wars_project_3

./: .firebaserc  .gitignore  .gitleaksignore  .lighthouserc.json  ANALYTICS_VALIDATION.md  AUTH_AUDIT_REPORT.md  BACKEND_AUTH_REPORT.md  CALCULATOR_VALIDATION.md  DATA_SOURCES.md  DEMO_SCRIPT.md  EMAIL_AUTH_TEST_REPORT.md  FEATURE_COMPLETENESS.md  FIREBASE_CONFIG_REPORT.md  GEMINI_VALIDATION.md  GOOGLE_AUTH_TEST_REPORT.md  METHODOLOGY.md  PLACEHOLDER_PURGE_REPORT.md  README.md  ROUTE_PROTECTION_REPORT.md  ROUTINE_ANALYZER.md  SMOKE_TEST.md  SMOKE_TEST_REPORT.md  audit.json  docker-compose.yml  firebase.json  generate_gemini_report.py  generate_reports.py  lighthouse-report.json  package-lock.json  package.json  run_smoke_test.py  scaffold.py  scaffold_app.py  scaffold_phase1.py  scaffold_phase1_fe.py  scaffold_phase2.py  scaffold_phase3.py  scaffold_phase4.py  scaffold_phase5.py  test_leaderboard.py
backend/: .coverage  CUsersAsus.geminiantigravity-idebrain5395383d-281f-47c1-a028-c7cfe4badf20LEADERBOARD_INTEGRITY_REPORT.md  Dockerfile  README.md  alembic.ini  generate_leaderboard_report.py  generate_reports.py  list_models.py  local.db  pip-audit.json  pyproject.toml  seed_emission_factors.py  test_auth_flows.py
backend/alembic/: env.py
backend/alembic/versions/: 14f5b9a4795f_initial_schema_with_carbon_and_emission_.py  8205d672c601_add_new_features.py  9b88af4d5611_add_community_and_leaderboard_models.py  a295877064f9_add_activity_column_to_carbon_entries.py  (+1 more)
backend/app/: main.py
backend/scripts/: seed.py
backend/tests/: test_main.py  test_real.py
(+100 files in other folders)
